# assemblyai-tg

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  logger.py  main.py
app/bot/: handlers.py  messages.py
app/services/: assemblyai_client.py  docx_builder.py  telegram_files.py  transcript_formatter.py
app/utils/: files.py  mime.py
tests/: test_docx_builder.py  test_mime.py  test_transcript_formatter.py
